--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,6 +91,7 @@ a {
 }
 
 .photo_section img {
+    filter: grayscale(100%) sepia(0%) hue-rotate(0) saturate(0%);
     position: absolute;
     bottom: -5%;
     left: -5%;
@@ -98,4 +99,13 @@ a {
     width: 18vw;
     border-radius: 12px;
     z-index: 2;
+
+    transition: filter 0.3s ease, bottom 0.3s ease, left 0.3s ease;
+
+}
+
+.photo_section img:hover {
+    filter: grayscale(0%);
+    bottom: 0%;
+    left: 0%;
 }
